invoke method susccessful code written