@@ -1,7 +1,7 @@
 package TestCases;
 
+import Config.TestBase;
 import Utils.ExcelReader;
-
 import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -9,6 +9,7 @@ import java.lang.reflect.Parameter;
 import java.util.HashMap;
 import java.util.Set;
 
+import org.openqa.selenium.WebDriver;
 import org.reflections.Reflections;
 import org.reflections.scanners.MethodAnnotationsScanner;
 import org.reflections.util.ClasspathHelper;
@@ -17,7 +18,7 @@ import org.testng.annotations.AfterTest;
 import org.testng.annotations.BeforeTest;
 import org.testng.annotations.Test;
 
-public class ReflectionToDataDrive
+public class ReflectionToDataDrive extends TestBase
 {
     /*
             Create a new class --> call it in @BeforeTest in each test case
@@ -38,24 +39,21 @@ public class ReflectionToDataDrive
     public static Class<? extends Class> TestCaseClassName;
     private Class<? extends Class> TestCaseClassInstance;
     HashMap<Integer, String> ReflectMap = new HashMap<>();
-
+    public static int rowCount;
     static StringBuilder sb;
-
-    public ReflectionToDataDrive()
+  //  public static WebDriver driver = TestBase.getDriver();
+    public static WebDriver driver;
+    public ReflectionToDataDrive(WebDriver driver)
     {
         String DataPath =  System.getProperty("user.dir")+"/src/main/resources/TestData/TestData.xlsx";
         ExL = new ExcelReader(DataPath);
         System.out.println(ExL);
+        this.driver = driver;
     }
     public int getRowCountReflectDD(String sheetName)
     {
-        int rowCount = ExL.getRowCount(sheetName);
-        return  rowCount;
-    }
-  public static void main(String args[])
-    {
-       // ReflectionToDataDrive reflectDD = new ReflectionToDataDrive();
-        System.out.println(ExL);
+        rowCount = ExL.getRowCount(sheetName);
+        return rowCount;
     }
     public Class<? extends Class> readClass(String className) throws IllegalAccessException, InstantiationException
     {
@@ -66,11 +64,10 @@ public class ReflectionToDataDrive
         } catch (ClassNotFoundException e) {
             e.printStackTrace();
         }
-       //System.out.println(TestCaseClassName.getCanonicalName()); // print
-        //Object objKeywordName = TestCaseClassName.newInstance();
         return TestCaseClassName;
     }
-    public void countAnnotations(String className) throws Exception {
+    public void countAnnotations(String className) throws Exception
+    {
         TestCaseClassInstance = readClass(className);
         Method[] methods = TestCaseClassInstance.getDeclaredMethods();
         for (int i = 0; i < methods.length; i++)
@@ -92,102 +89,40 @@ public class ReflectionToDataDrive
                 ReflectMap.put(runPriority,methods[i].getName());
             }
         }
-        for (Integer key : ReflectMap.keySet())
+        //Return number of rows from testdata sheet matching the testcase class name and invoke the methods
+        rowCount = ExL.getRowCount("TestData");
+        int dataIter = 0;
+        for( dataIter =1;dataIter<= rowCount;dataIter++)
+        {
+            for (Integer key : ReflectMap.keySet())
+                {
+                    System.out.println("Method Priority is : "+key+"   for method named : "+ReflectMap.get(key));
+                    Object objClass = TestCaseClassName.getConstructor().newInstance();
+                    String methodName = ReflectMap.get(key);
+                    Method TestMethodName = TestCaseClassName.getDeclaredMethod(methodName);
+                    if(TestMethodName.isAnnotationPresent(Test.class))
+                    {
+                        TestMethodName.invoke(objClass, null);
+                    }
+                }
+        }
+
+/*        for (Integer key : ReflectMap.keySet())
         {
             System.out.println("Method Priority is : "+key+"   for method named : "+ReflectMap.get(key));
-/*            String methodName = ReflectMap.get(key);
-            Method TestMethodName = TestCaseClassName.getClass().getMethod(methodName);
-            TestMethodName.invoke(TestCaseClassName); // pass arg*/
-          //  runAllAnnotatedWith(Test.class);
-            Object objKeywordName = TestCaseClassName.newInstance();
+            Object objClass = TestCaseClassName.getConstructor().newInstance();
             String methodName = ReflectMap.get(key);
-            Method TestMethodName = TestCaseClassName.getMethod(methodName);
+            Method TestMethodName = TestCaseClassName.getDeclaredMethod(methodName);
             if(TestMethodName.isAnnotationPresent(Test.class))
             {
-                // Invoke method with appropriate arguments
-                //Object obj = TestMethodName.invoke(TestCaseClassName.newInstance(), null);
-                TestMethodName.invoke(objKeywordName, null);
-
-            }
-
-         /*   Method[] methodName = TestCaseClassName.getMethods();
-            if (methodName.isAnnotationPresent(mod.class)) {
-                // Invoke method with appropriate arguments
-                Object obj = mt.invoke(runClass, null);
-            }*/
-
-
-
-        }
-       // Object objKeywordName = TestCaseClassInstance.newInstance();
-        //int TotalMethods   = TestCaseClassInstance.getDeclaredMethods().length;
-
-
-
-
-        //@TEST BLOCK :						//THIS LOOP IS TO FIND THE EXACT METHOD NAME IN THE CLASS AND EXECUTE THE @Test BLOCK
-
-    /*    for(int mn=0;mn<=TotalMethods;mn++)
-        {
-            //code to get parameters
-            String strMethodParam ,strParamFinal = null ;
-            Parameter[] param = TestCaseClassInstance.getDeclaredMethods()[mn].getParameters();
-
-            String methodName   = TestCaseClassInstance.getDeclaredMethods()[mn].getName();
-            if(methodName.equals("") || methodName.equals(null) )
-            {
-                break;
-            }
-            else {
-                if(TestCaseClassInstance.getDeclaredMethods()[mn].getParameterTypes().length > 0 )
-                {
-                    //Code to prepare a string for parameter list-->THIS BLOCK WILL TAKE CARE OF METHOD WITH PARAMETERS DYNAMICALLY
-                    System.out.println("Inside method with parameters");
-                    Method setNameMethod = objKeywordName.getClass().getMethod(methodName.toString(),TestCaseClassInstance.getDeclaredMethods()[mn].getParameterTypes());
-                    String keywordname = methodName.toString();
-                    if(strMethodName.equals(keywordname))
-                    {
-                        System.out.println(setNameMethod.toString());
-                        // setNameMethod.invoke(objKeywordName,"TC1",1,"TS","dsds" );     // EXECUTE THE METHOD
-                        int paramCount = TestCaseClassInstance.getDeclaredMethods()[mn].getGenericParameterTypes().length;
-                        Object argArray[] = new Object[paramCount];
-                        sb = new StringBuilder(32);
-                        for(int ptn=0;ptn<paramCount;ptn++)
-                        {
-                            //System.out.println(KeywordNameClass.getDeclaredMethods()[mn].getGenericParameterTypes()[ptn].toString());
-                            String fPList = TestCaseClassInstance.getDeclaredMethods()[mn].getParameterTypes()[ptn].toString();
-                            String finalParamList = fPList.replace("class", "").trim();
-                            if(finalParamList.equalsIgnoreCase("java.lang.String"))
-                            {
-                                sb.append("java.lang.String.class").append(" , ");
-                                argArray[ptn] =CellValTCSheet ;
-                                // + r.nextInt((10 - 1) + 1) + 1 ;
-                            }
-                            else if(finalParamList.equalsIgnoreCase("int"))
-                            {
-                                sb.append(1).append(" , ");
-                                argArray[ptn] = testDataRow ;
-                            }
-                        }
-                        setNameMethod.invoke(objKeywordName,argArray);
-                        break;
-                    }
-                }
-                else
-                {
-                    Method setNameMethod = objKeywordName.getClass().getMethod(methodName,null);
-                    String keywordname = methodName.toString();
-                    if(strMethodName.equals(keywordname))
-                    {
-                        System.out.println(setNameMethod.toString());
-                        setNameMethod.invoke(objKeywordName);     // EXECUTE THE METHOD
-                        break;
-                    }
-                }
+                TestMethodName.invoke(objClass, null);
             }
         }*/
+     //  driver.close();
+
+
     }
-    public static void runAllAnnotatedWith(Class<? extends Annotation> annotation) throws Exception
+/*    public static void runAllAnnotatedWith(Class<? extends Annotation> annotation) throws Exception
     {
         Reflections reflections = new Reflections(new ConfigurationBuilder()
                 .setUrls(ClasspathHelper.forJavaClassPath())
@@ -196,9 +131,8 @@ public class ReflectionToDataDrive
 
         for (Method m : methods)
         {
-            // for simplicity, invokes methods as static without parameters
             m.invoke(null);
         }
-    }
+    }*/
 }
 
